force-app/main/default/objects/Interview__c/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>The scheduled or completed date and time of the interview. Important for planning and status tracking.</description>
    <label>Interview Date</label>
    <type>DateTime</type>
</CustomField>