force-app/main/default/objects/Interview__c/fields/Interview_Mode__c.field-meta.xml
<CustomField>
    <fullName>Interview_Mode__c</fullName>
    <description>The format or medium of the interview.</description>
    <label>Interview Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephonic</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>