force-app/main/default/objects/Interview__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <description>Name(s) of the person(s) conducting the interview, whether internal, client-side, or agency.</description>
    <label>Interviewer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>