force-app/main/default/objects/Interview__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the open position or job role the interview is for. Helps identify the context of the interview.</description>
    <label>Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>