force-app/main/default/objects/Interview__c/validationRules/Interview_Status_cannot_move_backward.validationRule-meta.xml
<ValidationRule>
    <fullName>Interview_Status_cannot_move_backward</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),

    OR(
        ISPICKVAL(PRIORVALUE(Interview_Status__c), &quot;Hired&quot;),
        ISPICKVAL(PRIORVALUE(Interview_Status__c), &quot;Rejected&quot;),

        CASE(
            Interview_Status__c,
            &quot;New&quot;, 1,
            &quot;Recruiter Screening&quot;, 2,
            &quot;Shortlisted&quot;, 3,
            &quot;Interviewing&quot;, 4,
            &quot;Offered&quot;, 5,
            &quot;Hired&quot;, 6,
            &quot;Rejected&quot;, 7,
            0
        )
        &lt;
        CASE(
            PRIORVALUE(Interview_Status__c),
            &quot;New&quot;, 1,
            &quot;Recruiter Screening&quot;, 2,
            &quot;Shortlisted&quot;, 3,
            &quot;Interviewing&quot;, 4,
            &quot;Offered&quot;, 5,
            &quot;Hired&quot;, 6,
            &quot;Rejected&quot;, 7,
            0
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Interview_Status__c</errorDisplayField>
    <errorMessage>Interview Status cannot move backward and cannot be changed after Hired or Rejected.</errorMessage>
</ValidationRule>