force-app/main/default/objects/Interview__c/validationRules/VR1_InterviewDate_Should_Be_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1_InterviewDate_Should_Be_In_Future</fullName>
    <active>true</active>
    <description>This validation rule ensures that the Interview Date is always set in the future</description>
    <errorConditionFormula>Interview_Date__c &lt;= NOW()</errorConditionFormula>
    <errorDisplayField>Interview_Date__c</errorDisplayField>
    <errorMessage>Interview Date cannot be a past date/time</errorMessage>
</ValidationRule>