force-app/main/default/objects/Interview__c/validationRules/VR2_Status_Cannot_Change_After_Hired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR2_Status_Cannot_Change_After_Hired</fullName>
    <active>true</active>
    <description>User cannot change the Interview status once it is set to &quot;Hired&quot;.</description>
    <errorConditionFormula>AND(
   ISCHANGED(Interview_Status__c),
   ISPICKVAL(PRIORVALUE(Interview_Status__c), &quot;Hired&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot change the Interview status once it is set to &quot;Hired&quot;. Please contact your system administrator for assistance.</errorMessage>
</ValidationRule>