force-app/main/default/objects/Interview__c/validationRules/VR3_Feedback_Character_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR3_Feedback_Character_Limit</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Feedback__c ) &lt; 100</errorConditionFormula>
    <errorDisplayField>Feedback__c</errorDisplayField>
    <errorMessage>Description must contain at least 100 characters.</errorMessage>
</ValidationRule>