force-app/main/default/objects/Interview__c/validationRules/VR3_Feedback_should_be_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>VR3_Feedback_should_be_Updated</fullName>
    <active>false</active>
    <description>You should update feedback if either &quot;Round&quot; or &quot;Interview status&quot; fields are changed.</description>
    <errorConditionFormula>OR(
        AND(
            ISCHANGED(Interview_Status__c),
            OR(
                ISBLANK(Feedback__c),
                Feedback__c = PRIORVALUE(Feedback__c)
            )
        ),
        AND(
            ISCHANGED(Round__c),
            OR(
                ISBLANK(Feedback__c),
                Feedback__c = PRIORVALUE(Feedback__c)
            )
        )
)</errorConditionFormula>
    <errorDisplayField>Feedback__c</errorDisplayField>
    <errorMessage>Feedback must be updated when Status or Round changes.</errorMessage>
</ValidationRule>