force-app/main/default/objects/Interview__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Position__c</columns>
    <columns>Candidate__c</columns>
    <columns>Interview_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>