force-app/main/default/objects/Interview__c/listViews/Interview_Queue_Interview.listView-meta.xml
<ListView>
    <fullName>Interview_Queue_Interview</fullName>
    <filterScope>Queue</filterScope>
    <label>Interview Queue</label>
    <queue>Interview_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>